--- a/tseg/templates/create_client.html
+++ b/tseg/templates/create_client.html
@@ -50,7 +50,21 @@
 						{{ form.contact(class="form-control form-control-lg") }}
 					{% endif %}
 				</div>
-				
+				<div class="form-group">
+					<!-- boottrap  -->
+					{{ form.comments.label(class="form-control-label") }}
+					<!-- errores de entrada  -->
+					{% if form.comments.errors %}
+						{{ form.comments(class="form-control form-control-lg is-invalid") }}
+						<div class="invalid-feedback">
+							{% for error in form.comments.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.comments(class="form-control form-control-lg", rows='6') }}
+					{% endif %}
+				</div>
 			</fieldset>
 			<div class="form-group">
 				<!-- boottrap for the submit button  -->
