--- a/tseg/templates/client_equipments.html
+++ b/tseg/templates/client_equipments.html
@@ -6,10 +6,11 @@
           	<div class="media-body">
             	<div class="article-metadata">
               		<a class="mr-2" href="{{ url_for('clients.client_equipments', client_name=equipment.owner.client_name) }}">{{ equipment.owner.client_name }}</a>
-              		<small class="text-muted">{{ equipment.last_modified.strftime('%Y-%m-%d') }}</small>
+              		<small class="text-muted">{{ equipment.last_modified.strftime('%d-%m-%Y') }}</small>
             	</div>
             	<h2><a class="article-title" href="{{ url_for('equipments.equipment', equipment_id=equipment.id) }}">{{ equipment.title }}</a></h2>
             	<p class="article-content">{{ equipment.content }}</p>
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('equipments.update_equipment', equipment_id=equipment.id, client_id=equipment.owner) }}">Editar equipo</a>
           </div>
         </article>
     {% endfor %}
