--- a/tseg/templates/create_equipment.html
+++ b/tseg/templates/create_equipment.html
@@ -6,9 +6,7 @@
 			<fieldset class="form-group">
 				<legend class="border-bottom mb-4">{{ legend }}</legend>
 				<div class="form-group" autofocus>
-					<!-- boottrap  -->
-					{{ form.title.label(class="form-control-label") }}
-					<!-- errores de entrada  -->
+					{{ form.title.label(class="form-control-label") }}					
 					{% if form.title.errors %}
 						{{ form.title(class="form-control form-control-lg is-invalid") }}
 						<div class="invalid-feedback">
@@ -32,13 +30,11 @@
 							{% endfor %}
 						</div>
 					{% else %}
-						{{ form.content(class="form-control form-control-lg") }}
+						{{ form.content(class="form-control form-control-lg", rows='10') }}
 					{% endif %}
 				</div>
 				<div class="form-group">
-					<!-- boottrap  -->
 					{{ form.owner.label(class="form-control-label") }}
-					<!-- errores de entrada  -->
 					{% if form.owner.errors %}
 						{{ form.owner(class="form-control form-control-lg is-invalid") }}
 						<div class="invalid-feedback">
@@ -54,7 +50,7 @@
 			</fieldset>
 			<div class="form-group">
 				<!-- boottrap for the submit button  -->
-				{{ form.submit(class="btn btn-outline-info", value="Actualizar") }}
+				{{ form.submit(class="btn btn-outline-info", value="Crear / Actualizar") }}
 			</div>
 		</form>
 	</div>	
