--- a/tseg/templates/equipment.html
+++ b/tseg/templates/equipment.html
@@ -4,7 +4,7 @@
         <div class="media-body">
             <div class="article-metadata">
               <div>
-                  <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('equipments.update_equipment', equipment_id=equipment.id) }}">Editar equipo</a>
+                  <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('equipments.update_equipment', equipment_id=equipment.id, client_id=equipment.owner) }}">Editar equipo</a>
                   <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Eliminar equipo</button>
               </div>
             </div>
