--- a/tseg/templates/main.html
+++ b/tseg/templates/main.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class='content-section'>
-        <h1 class="aticle-title mb-5">Bienvenido al programa de seguimiento de equipos de L.I.E. S.R.L.</h1>
+        <h7>L.I.E. S.R.L.</h7>
+        <h3 class="aticle-title mb-5">Bienvenido al programa de seguimiento de equipos TSEG</h3>
         <div class="article-content mt-5">
-            <h4><p>Cada usuario debe crear una cuenta usando: Nombre, Mail y Contraseña.</p></h4>
-            <p>Con ello podrá crear nuevos equipos, asociarlos a clientes, hacer búsquedas por palabras clave, y dejar registrado cada cambio añadiendo comentarios a cada elemento.</p>
+            <p>Después de crear una cuenta, podrá usar la aplicación con un usuario registrado. Esto le dará acceso a: crear nuevos equipos, asociarlos con el cliente dueño del mismo, hacer búsquedas por palabras clave (canal, núm de serie, etc), dejar registrado cada cambio añadiendo comentarios a cada elemento.</p>
             {% if not current_user.is_authenticated %}
                 <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('users.login') }}">Iniciar sesión</a>
             {%endif%}
